--- a/app/src/main/res/layout/staff_activity_retur_cust.xml
+++ b/app/src/main/res/layout/staff_activity_retur_cust.xml
@@ -6,37 +6,37 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical"
-    tools:context=".view.sales.sp.ActivitySpList">
+    tools:context=".view.staff.retur.ActivityReturCust">
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarList1"
+        android:id="@+id/toolbarCust1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize"
         android:visibility="gone">
         <RelativeLayout
-            android:id="@+id/laybarList11"
+            android:id="@+id/laybarCust11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingRight="15dp"
             android:minHeight="?attr/actionBarSize"
             android:elevation="5dp">
             <LinearLayout
-                android:id="@+id/laybarList12"
+                android:id="@+id/laybarCust12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:orientation="horizontal">
                 <ImageView
-                    android:id="@+id/batalList"
+                    android:id="@+id/batalCust"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_marginHorizontal="5dp"
                     android:src="@drawable/ic_batal"/>
 
                 <ImageView
-                    android:id="@+id/lanjutList"
+                    android:id="@+id/lanjutCust"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/ic_lanjut"/>
@@ -45,26 +45,26 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/laybarList12"
-                android:layout_toRightOf="@+id/backList1"
+                android:layout_toLeftOf="@+id/laybarCust12"
+                android:layout_toRightOf="@+id/backCust1"
                 android:layout_marginBottom="20dp"
                 android:layout_centerVertical="true"
                 android:background="@drawable/dec_border">
                 <EditText
-                    android:id="@+id/namaList"
+                    android:id="@+id/namaCust"
                     android:layout_width="match_parent"
                     android:layout_height="25dp"
                     android:layout_centerVertical="true"
                     android:gravity="center_vertical"
                     android:layout_marginHorizontal="10dp"
                     android:background="@color/colorRed"
-                    android:hint="Nama Cust."
+                    android:hint="Nama Produk"
                     android:textColor="@android:color/black"
                     android:textSize="15dp" />
             </RelativeLayout>
 
             <ImageView
-                android:id="@+id/backList1"
+                android:id="@+id/backCust1"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_centerVertical="true"
@@ -74,78 +74,39 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbarList2"
+        android:id="@+id/toolbarCust2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:minHeight="?attr/actionBarSize">
-        <RelativeLayout
-            android:id="@+id/laybarList21"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingRight="15dp"
-            android:minHeight="?attr/actionBarSize"
-            android:elevation="5dp">
-            <LinearLayout
-                android:id="@+id/laybarList22"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/cariList"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/ic_cari"/>
-            </LinearLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/laybarList22"
-                android:layout_toRightOf="@+id/backList2"
-                android:layout_marginBottom="20dp"
-                android:layout_centerVertical="true"
-                android:background="@drawable/dec_border">
-                <Spinner
-                    android:id="@+id/spinnerList"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="10dp"
-                    android:backgroundTint="@android:color/black"
-                    android:gravity="center_vertical" />
-
-                <TextView
-                    android:id="@+id/statusList"
-                    android:layout_width="match_parent"
-                    android:layout_height="25dp"
-                    android:layout_centerVertical="true"
-                    android:gravity="center_vertical"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="45dp"
-                    android:background="@color/colorRed"
-                    android:hint="Status SP"
-                    android:textColor="@android:color/black"
-                    android:textSize="15dp" />
-            </RelativeLayout>
-
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
             <ImageView
-                android:id="@+id/backList2"
+                android:id="@+id/backCust2"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
                 android:layout_marginRight="15dp"
                 android:src="@drawable/ic_kembali"/>
-        </RelativeLayout>
+
+            <TextView
+                android:id="@+id/laybarCust2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:layout_gravity="center_vertical"
+                android:text="Customer"
+                android:textSize="20dp"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"/>
+        </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerList"
+        android:id="@+id/recyclerCust"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        tools:listitem="@layout/list_sp"/>
+        tools:listitem="@layout/list_customer"/>
 </LinearLayout>
