--- a/app/src/main/res/layout/staff_activity_retur_list.xml
+++ b/app/src/main/res/layout/staff_activity_retur_list.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:orientation="vertical"
-    tools:context=".view.sales.sp.ActivitySpList">
+    tools:context=".view.staff.retur.ActivityReturList">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarList1"
         android:layout_width="match_parent"
@@ -94,10 +94,16 @@
                 android:layout_centerVertical="true"
                 android:orientation="horizontal">
                 <ImageView
+                    android:id="@+id/tambahList"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginHorizontal="5dp"
+                    android:src="@drawable/ic_tambah"/>
+
+                <ImageView
                     android:id="@+id/cariList"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
                     android:src="@drawable/ic_cari"/>
             </LinearLayout>
 
@@ -127,7 +133,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="45dp"
                     android:background="@color/colorRed"
-                    android:hint="Status SP"
+                    android:hint="Status Retur"
                     android:textColor="@android:color/black"
                     android:textSize="15dp" />
             </RelativeLayout>
@@ -147,5 +153,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="5dp"
-        tools:listitem="@layout/list_sp"/>
+        tools:listitem="@layout/list_customer"/>
 </LinearLayout>
