--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">10.0.2.2</domain>
+        <domain includeSubdomains="true">tcrcorp.id</domain>
         <domain includeSubdomains="true">dev.fuboru.co.id</domain>
         <domain includeSubdomains="true">fuboru.co.id</domain>
         <domain includeSubdomains="true">google.com</domain>
