--- a/app/src/main/res/layout/staff_activity_sp.xml
+++ b/app/src/main/res/layout/staff_activity_sp.xml
@@ -107,7 +107,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:hint="Masukkan Nomor Order"
-                        android:inputType="number"
+                        android:inputType="textCapCharacters"
                         android:textColor="@android:color/black"
                         android:textSize="15dp"
                         android:textStyle="bold" />
